--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
-  NC_PORT=7000
-  NC_DB_HOST=localhost
-  NC_DB_PORT=27017
-  NC_DB_NAME=ncDB
-  NC_TOKEN_KEY=q1w2e3r4
+NC_PORT=7000
+NC_DB_HOST=localhost
+NC_DB_PORT=27017
+NC_DB_NAME=ncDB
+NC_TOKEN_KEY=q1w2e3r4
+NC_PASSWORD_SALT_ROUNDS=10
