--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,32 @@
   "description": "apiserver of network checker",
   "main": "app.js",
   "scripts": {
-    "start": "node app"
+    "start:dev": "cross-env NODE_ENV=development nodemon --exec babel-node src/app",
+    "start:production": "cross-env NODE_ENV=production node dist/app",
+    "start": "npm-run-all build start:production",
+    "build": "npm-run-all delete:build build:production",
+    "build:production": "cross-env NODE_ENV=production npx babel src --out-dir dist",
+    "delete:build": "rimraf dist"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.7",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "babel-node": "0.0.1-security",
+    "cross-env": "^7.0.0",
+    "nodemon": "^2.0.2",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.1"
+  }
 }
