--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.3",
     "@testing-library/user-event": "^7.1.2",
+    "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "localStorage": "^1.0.4",
     "react": "^16.12.0",
