--- a/checker/package.json
+++ b/checker/package.json
@@ -2,14 +2,20 @@
   "name": "checker",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node index"
+    "start": "tsc && node dist/index",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^13.7.0",
     "mongodb": "^3.4.1"
+  },
+  "devDependencies": {
+    "tslint": "^6.0.0",
+    "typescript": "^3.7.5"
   }
 }
